--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.0",
-    "@angular-devkit/core": "0.6.0",
-    "@angular-devkit/schematics": "0.6.0",
+    "@angular-devkit/build-angular": "^0.6.0",
+    "@angular-devkit/core": "^0.7.0-rc.0",
+    "@angular-devkit/schematics": "^0.7.0-rc.0",
     "@angular/cli": "6.0.1",
     "@angular/compiler": "6.0.2",
     "@angular/compiler-cli": "6.0.2",
@@ -42,10 +42,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.1.0",
     "codelyzer": "~4.3.0",
-    "firebase-tools": "^3.19.0",
+    "firebase-tools": "^3.19.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
