--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mario-kart-randomizer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "scripts": {
@@ -20,7 +20,9 @@
     "@angular/http": "6.0.2",
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "6.0.2",
+    "@angular/service-worker": "6.0.2",
     "@capacitor/core": "^1.0.0-alpha.38",
     "@ionic/angular": "4.0.0-alpha.7",
     "@ionic/schematics-angular": "latest",
@@ -50,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-merge-driver": "^2.3.5",
     "protractor": "~5.3.0",
     "ts-node": "~6.0.2",
     "tslint": "~5.10.0",
